# claude-swarm

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  FAQ.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: python-project.swarm.yaml  react-native-project.swarm.yaml  typescript-nodejs.swarm.yaml
src/claude_swarm/: __init__.py  cli.py  config.py  orchestrator.py
src/claude_swarm/agents/: __init__.py  base.py  registry.py  specialized.py
tests/: test_agents.py  test_config.py
