[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-swarm"
version = "0.2.2"
description = "Universal multi-agent orchestration system for Claude Code"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Igor Kats" }
]
keywords = ["claude", "ai", "agents", "orchestration", "development"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "watchdog>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black",
    "ruff",
]

[project.scripts]
swarm = "claude_swarm.cli:main"

[project.urls]
Homepage = "https://github.com/igor-kats/claude-swarm"
Documentation = "https://github.com/igor-kats/claude-swarm#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_swarm"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line too long - handled by Black, problematic in multi-line strings
